# crewAI-experiments

./: README.md
crewAI-01/: app.py  requirements.txt
crewAI-02/: app.py
crewAI-03-poetry/: pyproject.toml  requirements.txt
crewAI-03-poetry/src/financial_analyst_crew/: crew.py  main.py
crewAI-03-poetry/src/financial_analyst_crew/config/: agents.yaml  tasks.yaml
